--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,17 @@ header {
   opacity: 0%;
 } 
 
+.icon {
+  border-radius: 25px;
+  font-size: 10px;
+  opacity: 60%;
+  background-color: white;
+  margin-left: 410px;
+  margin-right: 400px;
+  margin-top: -50px;
+  margin-bottom: 20px;
+}
+
 .app.cloud{
   background-image: url("./Images/cloudy.jpeg");
 }
